--- a/template/quiz2.html
+++ b/template/quiz2.html
@@ -1,7 +1,11 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8"
+		<meta charset="UTF-8">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+
+		<link rel="stylesheet" type="text/css" href="quiz2.css" />
+
 		<title>Quiz 2</title>
 	</head>
 	<body>
@@ -9,7 +13,7 @@
 		<div class="content">
 			<h1>Hi, Welcome to the second quiz!</h1>
 			<p>Make sure the containers below respond to the events or functions implemented with quiz2.js</p>
-			<div class="evens">			
+			<div class="events">
 				<div class="click">
 					<span>click event</span>
 				</div>
@@ -20,18 +24,22 @@
 				<div>
 					<span>submit event</span>
 					<!-- The form not having an action or method is not a bug in this case -->
-					<form>
+					<form class = "submit">
 						<label for="form">AJAX, yo!</label>
 						<input type="text" id="form" name="form" placeholder="Enter Some Text" />
-						<input value="SUBMIT">
+						<input type="SUBMIT" value="Submit!" class=".submit">
 					</form>
 				</div>
-				div class="timeout">
-					<span>timeout function</span>
+				<div class="timeout">
+					<span style="color: #0078A0">timeout function</span>
 				</div>
 			</div>
-		
+			<div class="title">
+				<button id="btnTitle" type="submit" class="result">Get Title!</button>
+				<button id="btnKeep" type="submit" class="result" style="display:none;">Keep It</button>
 
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js">
+				<p id="titles"></p>
+			</div>
 	</body>
+	<script src="quiz2.js"></script>
 </html>
